--- a/Q-back/2022-2-21.md
+++ b/Q-back/2022-2-21.md
@@ -3,11 +3,10 @@
 不可变数据（3 个）：Number（数字）、String（字符串）、Tuple（元组）；
 可变数据（3 个）：List（列表）、Dictionary（字典）、Set（集合）。
 
-### import 的模块
-[https://blog.csdn.net/qq_26442553/article/details/81783587]: 
+### [import的模块](https://blog.csdn.net/qq_26442553/article/details/81783587)
 
-### chown
-[https://blog.csdn.net/happydecai/article/details/110161306?ops_request_misc=&amp;request_id=&amp;biz_id=102&amp;utm_term=chown%20-r&amp;utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduweb~default-0-110161306.nonecase&amp;spm=1018.2226.3001.4187]: 
+### [chown]
+(https://blog.csdn.net/happydecai/article/details/110161306?ops_request_misc=&amp;request_id=&amp;biz_id=102&amp;utm_term=chown%20-r&amp;utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduweb~default-0-110161306.nonecase&amp;spm=1018.2226.3001.4187)
 -c 显示更改的部分的信息
 -f 忽略错误信息
 -h 修复符号链接
@@ -28,8 +27,6 @@
  ⑪. /tmp ：存放各种临时文件，是所有用户均可访问的地点
  ⑫. /var ：存放系统运行中常改变的文件，如系统日志
 
-### mysql 增删改查
-https://blog.csdn.net/qq_38122518/article/details/80393514
+### [mysql 增删改查](https://blog.csdn.net/qq_38122518/article/details/80393514)
 
-### kill -9 
-https://blog.51cto.com/liangchaoxi/4051630
+### [kill -9 ](https://blog.51cto.com/liangchaoxi/4051630)
