--- a/Q-back/2022-2-21.md
+++ b/Q-back/2022-2-21.md
@@ -1,31 +1,44 @@
-### Python3 的六个标准数据类型中：
+- [Python3](#python3)
+    - [数据类型](#六个标准数据类型)
+    - [import](#import的模块)
+- [Linux](#linux)
+    - [chown](#chown)
+    - [dir](#dir)
+- [MySQL](#mysql增删改查)
 
-不可变数据（3 个）：Number（数字）、String（字符串）、Tuple（元组）；
-可变数据（3 个）：List（列表）、Dictionary（字典）、Set（集合）。
 
-### [import的模块](https://blog.csdn.net/qq_26442553/article/details/81783587)
+# Python3
+## 六个标准数据类型
+###不可变数据：
+Number（数字）、String（字符串）、Tuple（元组）；
+###可变数据
+List（列表）、Dictionary（字典）、Set（集合）。
+## [import的模块](https://blog.csdn.net/qq_26442553/article/details/81783587)
 
-### [chown](https://blog.csdn.net/happydecai/article/details/110161306?ops_request_misc=&amp;request_id=&amp;biz_id=102&amp;utm_term=chown%20-r&amp;utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduweb~default-0-110161306.nonecase&amp;spm=1018.2226.3001.4187)
--c 显示更改的部分的信息
--f 忽略错误信息
--h 修复符号链接
--R 处理指定目录以及其子目录下的所有文件
--v 显示详细的处理信息
+# linux
+## [chown](https://blog.csdn.net/happydecai/article/details/110161306?ops_request_misc=&amp;request_id=&amp;biz_id=102&amp;utm_term=chown%20-r&amp;utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduweb~default-0-110161306.nonecase&amp;spm=1018.2226.3001.4187)
+- -c 显示更改的部分的信息  
+- -f 忽略错误信息  
+- -h 修复符号链接  
+- -R 处理指定目录以及其子目录下的所有文件  
+- -v 显示详细的处理信息  
 
-### linux 
- ①. /bin ：存放常用命令（即二进制可执行程序
- ②. /etc ：存放系统配置文件
- ③. /home ：所有普通用户的家目录
- ④. /root ：管理员用户的家目录
- ⑤. /usr ：存放系统应用程序及文档
- ⑥. /proc ：虚拟文件系统目录，以进程为单位存储内存的映射
- ⑦. /dev ：存放设备文件
- ⑧. /mnt ：临时挂载点
- ⑨. /lib ：存放库文件
- ⑩. /boot ：系统内核及启动有关的文件
- ⑪. /tmp ：存放各种临时文件，是所有用户均可访问的地点
- ⑫. /var ：存放系统运行中常改变的文件，如系统日志
+## dir 
+ - `/bin`   ：存放常用命令（即二进制可执行程序
+ -  `/etc`  ：存放系统配置文件
+ -  `/home` ：所有普通用户的家目录
+ -  `/root` ：管理员用户的家目录
+ -  `/usr`  ：存放系统应用程序及文档
+ -  `/proc` ：虚拟文件系统目录，以进程为单位存储内存的映射
+ -  `/dev`  ：存放设备文件
+ - `/mnt`   ：临时挂载点
+ - `/lib`   ：存放库文件
+ - `/boot`  ：系统内核及启动有关的文件
+ - `/tmp`   ：存放各种临时文件，是所有用户均可访问的地点
+ - `/var`   ：存放系统运行中常改变的文件，如系统日志
 
-### [mysql 增删改查](https://blog.csdn.net/qq_38122518/article/details/80393514)
+## [kill](https://blog.51cto.com/liangchaoxi/4051630)
 
-### [kill -9 ](https://blog.51cto.com/liangchaoxi/4051630)
+# [mysql增删改查](https://blog.csdn.net/qq_38122518/article/details/80393514)
+
+
